# working

./: .gitignore
task-orchestrator/: .env.example  README.md  pyproject.toml  requirements.txt
task-orchestrator/config/: config.yaml
task-orchestrator/src/: __init__.py  main.py
task-orchestrator/src/config/: __init__.py  settings.py
task-orchestrator/src/core/: __init__.py  orchestrator.py  state_machine.py  task_runner.py
task-orchestrator/src/integrations/: __init__.py  base.py  bitbucket_client.py  claude_cli.py  jira_client.py  redmine_client.py  test_runner.py
task-orchestrator/src/ui/: __init__.py  app.py
task-orchestrator/src/ui/screens/: __init__.py
task-orchestrator/src/ui/widgets/: __init__.py
task-orchestrator/src/utils/: logger.py
